--- a/crew.html
+++ b/crew.html
@@ -10,21 +10,21 @@
     <div class="home">
         <div class="nav-container">
             <div>
-                <img src="shared/logo.svg" alt="">
+                <img src="./shared/logo.svg" alt="">
             </div>
             <div class="btn">
                 <ul >
                     <li >
-                        <a href="/index.html" class="list-style-none"><span>00</span>HOME</a>
+                        <a href="./index.html" class="list-style-none"><span>00</span>HOME</a>
                     </li>
                     <li>
-                        <a href="/destination.html"><span>01</span>DESTINATION</a>
+                        <a href="./destination.html"><span>01</span>DESTINATION</a>
                     </li>
                     <li>
-                        <a href="/crew.html"><span>02</span>CREW</a>
+                        <a href="./crew.html"><span>02</span>CREW</a>
                     </li>
                     <li>
-                        <a href="/technology.html"><span>03</span>TECHNOLOGY</a>
+                        <a href="./technology.html"><span>03</span>TECHNOLOGY</a>
                     </li>
                 </ul>
                 
@@ -40,7 +40,7 @@
                 <p class="secondp">Anousheh Ansari is an iranian American engineer and co-founder of Prodea Systems.Ansari was the fourth self-funded space tourist,the first self-funded woman to fly to th ISS, and the first iranian in space. </p>
             </div>
             <div class="img">
-                <img src="crew/image-anousheh-ansari.png" alt="" >
+                <img src="./crew/image-anousheh-ansari.png" alt="" >
             </div>
         </section>
     </div>
