--- a/destination.html
+++ b/destination.html
@@ -10,21 +10,21 @@
     <div class="home">
         <div class="nav-container">
             <div>
-                <img src="shared/logo.svg" alt="">
+                <img src="./shared/logo.svg" alt="">
             </div>
             <div class="btn">
                 <ul >
                     <li >
-                        <a href="/index.html" class="list-style-none"><span>00</span>HOME</a>
+                        <a href="./index.html" class="list-style-none"><span>00</span>HOME</a>
                     </li>
                     <li>
-                        <a href="/destination.html"><span>01</span>DESTINATION</a>
+                        <a href="./destination.html"><span>01</span>DESTINATION</a>
                     </li>
                     <li>
-                        <a href="/crew.html"><span>02</span>CREW</a>
+                        <a href="./crew.html"><span>02</span>CREW</a>
                     </li>
                     <li>
-                        <a href="/technology.html"><span>03</span>TECHNOLOGY</a>
+                        <a href="./technology.html"><span>03</span>TECHNOLOGY</a>
                     </li>
                 </ul>
                 
@@ -36,10 +36,10 @@
         <h1 class="pick"><span>01</span>PICK YOUR DESTINATION</h1>
     </div>
     <div class="grid-container">
-        <img id="first-image" src="destination/image-moon.png" alt="">
-        <img id="second-image" src="destination/image-mars.png" alt="">
-        <img id="third-image" src="destination/image-europa.png" alt="">
-        <img id="forth-image" src="destination/image-titan.png" alt="">        
+        <img id="first-image" src="./destination/image-moon.png" alt="">
+        <img id="second-image" src="./destination/image-mars.png" alt="">
+        <img id="third-image" src="./destination/image-europa.png" alt="">
+        <img id="forth-image" src="./destination/image-titan.png" alt="">        
         <div>
             <div class="btn2">
                 <button onclick="showSlide1()">MOON</button>
