--- a/technology.html
+++ b/technology.html
@@ -10,21 +10,21 @@
     <div class="home">
         <div class="nav-container">
             <div>
-                <img src="shared/logo.svg" alt="">
+                <img src="./shared/logo.svg" alt="">
             </div>
             <div class="btn">
                 <ul >
                     <li >
-                        <a href="/index.html" class="list-style-none"><span>00</span>HOME</a>
+                        <a href="./index.html" class="list-style-none"><span>00</span>HOME</a>
                     </li>
                     <li>
-                        <a href="/destination.html"><span>01</span>DESTINATION</a>
+                        <a href="./destination.html"><span>01</span>DESTINATION</a>
                     </li>
                     <li>
-                        <a href="/crew.html"><span>02</span>CREW</a>
+                        <a href="./crew.html"><span>02</span>CREW</a>
                     </li>
                     <li>
-                        <a href="/technology.html"><span>03</span>TECHNOLOGY</a>
+                        <a href="./technology.html"><span>03</span>TECHNOLOGY</a>
                     </li>
                 </ul>
                 
@@ -56,9 +56,9 @@
             <p class="secondp">A spaceport or cosmodrone is a site for launching for receiving spacecraft, by analogy to the seaport for ships or airport for aircraft.Based in the famous Cape Canaveral, our spaceport is ideally situated to take advantage of the Earth's rotation for launch </p>
         </div>
         <div>
-            <img src="technology/image-launch-vehicle-landscape.jpg" alt=""  id="firstImage">
-            <img src="technology/image-space-capsule-landscape.jpg" alt=""  id="secondImage">
-            <img src="technology/image-spaceport-landscape.jpg" alt=""  id="thirdImage">
+            <img src="./technology/image-launch-vehicle-landscape.jpg" alt=""  id="firstImage">
+            <img src="./technology/image-space-capsule-landscape.jpg" alt=""  id="secondImage">
+            <img src="./technology/image-spaceport-landscape.jpg" alt=""  id="thirdImage">
         </div>
      </section>
         
