--- a/index.html
+++ b/index.html
@@ -13,21 +13,21 @@
     <div class="container-fluid home">
         <div class="nav-container">
             <div>
-                <img src="shared/logo.svg" alt="">
+                <img src="./shared/logo.svg" alt="">
             </div>
             <div class="btn">
                 <ul >
                     <li >
-                        <a href="/index.html" class="list-style-none"><span>00</span>HOME</a>
+                        <a href="./index.html" class="list-style-none"><span>00</span>HOME</a>
                     </li>
                     <li>
-                        <a href="/destination.html"><span>01</span>DESTINATION</a>
+                        <a href="./destination.html"><span>01</span>DESTINATION</a>
                     </li>
                     <li>
-                        <a href="/crew.html"><span>02</span>CREW</a>
+                        <a href="./crew.html"><span>02</span>CREW</a>
                     </li>
                     <li>
-                        <a href="/technology.html"><span>03</span>TECHNOLOGY</a>
+                        <a href="./technology.html"><span>03</span>TECHNOLOGY</a>
                     </li>
                 </ul>
                 
